# ninja2nix

./: .gitignore  flake.nix  ninja2nix.cabal  ninja2nix.nix
