cabal-version:            3.0
name:                     ninja2nix
version:                  0.1.0
stability:                Experimental
build-type:               Simple
category:                 Build
copyright:                Copyright 2017 Awake Security
author:                   Awake Security
maintainer:               Las Safin <me@las.rs>
license:                  Apache-2.0
license-file:             LICENSE.md
homepage:                 https://github.com/L-as/ninja2nix
bug-reports:              https://github.com/L-as/ninja2nix/issues
category:                 Build
synopsis:                 Convert a Ninja build file into a Nix derivation.
description:              Convert a Ninja build file into a Nix derivation.

source-repository head
    type:                 git
    branch:               master
    location:             https://github.com/L-as/ninja2nix.git

library
    hs-source-dirs:       library
    build-depends:        language-ninja              -any
                        , base >= 4.8   && < 5.0
                        , aeson >= 1.5
                        , aeson-pretty ^>= 0.8
                        , bytestring ^>= 0.10
                        , containers ^>= 0.6
                        , concurrent-supply ^>= 0.1
                        , flow ^>= 1.0
                        , hashable ^>= 1.3
                        , lens ^>= 4.19
                        , mtl ^>= 2.2
                        , prettyprinter ^>= 1.7
                        , prettyprinter-ansi-terminal ^>= 1.1
                        , text >= 1.2
                        , transformers ^>= 0.5
                        , unordered-containers ^>= 0.2
                          -- FIXME: remove unneeded dependencies
    exposed-modules:      NinjaToNix
                        , NinjaToNix.Pretty
                        , NinjaToNix.Types
                        , NinjaToNix.Misc.Supply
    default-language:     Haskell2010
    other-extensions:     OverloadedStrings
                          -- FIXME: add the rest of the extensions used
    ghc-options:
      -Wall -Wcompat -Wincomplete-uni-patterns
      -Wmissing-export-lists -Wincomplete-record-updates
      -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
      -fprint-explicit-foralls -fprint-explicit-kinds
      -O2

test-suite tests
    type:                 exitcode-stdio-1.0
    hs-source-dirs:       tests
    main-is:              Main.hs
    build-depends:        base, ninja2nix
    default-language:     Haskell2010
    ghc-options:          -threaded -Wall -O0

executable ninja2nix
    hs-source-dirs:       executables/ninja2nix
    main-is:              Main.hs
    build-depends:        base, ninja2nix
    default-language:     Haskell2010
    ghc-options:          -threaded -Wall -O2
